:iphone: Fix sitemap display on mobile

--- a/frontend/resources/styles/view/layouts/main-layout.scss
+++ b/frontend/resources/styles/view/layouts/main-layout.scss
@@ -93,6 +93,7 @@
   flex-shrink: 0;
   height: 55px;
   width: 100%;
+  overflow: scroll;
 
   .sitemap-title {
     border-bottom: 1px solid $soft-ui-border;
